syntax = "proto3";

import "share.proto";

package gitfs;


service RefsService {
  rpc Refs(RpcRefsRequest) returns (RpcRefsResponse);
  rpc RefsExchangeDefault(RpcRefsExchangeDefaultRequest) returns (RpcRefsExchangeDefaultResponse);
}


message RpcRefsRequest {
  RpcRepository repository = 1;
  bool branch = 2;
  bool tag = 3;
}

message RpcRefsResponse {
  repeated RpcRefs refs = 1;
}

message RpcRefsExchangeDefaultRequest {
  RpcRepository repository = 1;
  string default_branch = 2;
}

message RpcRefsExchangeDefaultResponse {
  RpcRefs refs = 1;
}
